--- a/app/globals.css
+++ b/app/globals.css
@@ -50,3 +50,10 @@ body {
 .product_name:hover {
   -webkit-text-stroke-width: 0px;
 }
+
+.global-title {
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #fff;
+  color: #26302b;
+  opacity: 0.1;
+}
