--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,8 @@
 
 body {
   background-image: url("./images/bg.png");
+  background-size: cover;
+  background-position: center;
   background-color: #f2f8f5;
 }
 
