--- a/app/globals.css
+++ b/app/globals.css
@@ -2,25 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
   background-image: url("./images/bg.png");
   background-size: cover;
   background-position: center;
   background-color: #f2f8f5;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .hero_span {
